# sfinance

./: .readthedocs.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  sfinance_usage_demo.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pypi-publish.yml  python-publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/sfinance/: __init__.py  exceptions.py  fetcher.py  sfinance.py  stock_screener.py  ticker.py
tests/: __init__.py  test_sfinance.py
