[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sfinance"
version = "0.1.1"
description = "it is a lightweight Python library for extracting financial data from structured, publicly accessible stock information pages"
readme = "README.rst"
authors = [
  {name = "shiva kharbanda", email = "shivakharbanda1311@gmail.com"}
]
maintainers = [
  {name = "shiva kharbanda", email = "shivakharbanda1311@gmail.com"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
    "selenium>=4.33.0",
    "beautifulsoup4>=4.13.4",
    "pandas>=2.0.0",
    "html5lib"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/shivakharbanda/sfinance/issues"
changelog = "https://github.com/shivakharbanda/sfinance/blob/master/changelog.md"
homepage = "https://github.com/shivakharbanda/sfinance"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

